bevel lost selection #36100

Closed
opened 2013-07-11 14:18:30 +02:00 by Andrey M · 4 comments

%%%--- Operating System, Graphics card ---
linux mint 15, windows 7 x64, GTX 570

- Blender version with error, and version that worked ---

with error: r58170 worked: ~some weeks ago

- Short description of error ---

when you bevel geometry it drop selection - very unusable to make new every time :\

video about it: http://youtu.be/T73TuD7n6Nw

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Make new scene with a box
  2. Select box and go to editmod
  3. select an edge or some else
  4. bevel it
    new edges or vertexes are not selected
  5. cry

%%%

%%%--- Operating System, Graphics card --- linux mint 15, windows 7 x64, GTX 570 - Blender version with error, and version that worked --- with error: r58170 worked: ~some weeks ago - Short description of error --- when you bevel geometry it drop selection - very unusable to make new every time :\ video about it: http://youtu.be/T73TuD7n6Nw - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Make new scene with a box 2. Select box and go to editmod 3. select an edge or some else 4. bevel it *new edges or vertexes are not selected* 6. cry %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Sorry about this. Confirmed. Will try to fix soon.%%%

%%%Sorry about this. Confirmed. Will try to fix soon.%%%

%%%BM_loop_interp_from_face was copying the face selection (which doesn't make much sense),
fixed r58177.%%%

%%%BM_loop_interp_from_face was copying the face selection (which doesn't make much sense), fixed r58177.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36100
No description provided.