fix [#36100] bevel lost selection interpolating loop was copying face attributes including selection, checked all users of this function and its safe to remove the call (which is bad to begin with).